Angular: Fix missing scrollbar in Userpanel rules

--- a/TDS_Client/Window/angular/projects/main/src/app/components/userpanel/userpanel-rules/userpanel-rules.component.scss
+++ b/TDS_Client/Window/angular/projects/main/src/app/components/userpanel/userpanel-rules/userpanel-rules.component.scss
@@ -1,5 +1,7 @@
 #container {
     height: 100%;
+
+    overflow-y: auto;
 }
 
 .rule-entry {
